add landing page background image

--- a/app/assets/stylesheets/contacts.css.scss
+++ b/app/assets/stylesheets/contacts.css.scss
@@ -1,5 +1,7 @@
-html,body {
-  height:100%;
+body {
+	background: #fff url('randell_cock.png') no-repeat fixed 0 0 / cover;
+	background-size: contain;
+	background-position: center;
 }
 
 h1 {
@@ -30,6 +32,6 @@ h1 {
 }
 
 .v-center {
-  margin-top:7%;
+  margin-top:19%;
 }
   
