--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -27,7 +27,7 @@
 
 
 
- <div class="container-full">
+ <div class="container">
 
       <div class="row">
        
@@ -42,6 +42,7 @@
         
       </div> <!-- /row -->
   
+<!--
   	  <div class="row">
        
         <div class="col-lg-12 text-center v-center" style="font-size:39pt;">
@@ -49,5 +50,6 @@
         </div>
       
       </div>
+-->
   
 </div>
