--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -31,7 +31,10 @@
 
       <div class="row">
        
-        <div class="col-lg-12 text-center v-center">
+        <div class="col-lg-4 model">
+					 <%= image_tag('randell_cock.png') %>
+        </div>
+        <div class="col-lg-6 text-center v-center">
           
           <h1>Stay tuned, we are launching very soon...</h1>
           <p class="lead">We are working on our website design. Leave us your email below, and we'll notify you the minute we open the doors.</p>
