--- a/app/views/fowls/_form.html.haml
+++ b/app/views/fowls/_form.html.haml
@@ -13,7 +13,12 @@
 		
 	.form-group
 		= f.input :title, input_html: { class: 'form-control' }
-		
+	.form-group
+		= f.input :price, input_html: { class: 'form-control' }
+	.form-group
+		= f.input :age, input_html: { class: 'form-control' }
+	.form-group
+		= f.input :contact_number, input_html: { class: 'form-control' }	
 	.form-group
 		= f.input :description, input_html: { class: 'form-control' }
 		
