--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
 %body
 	%nav.navbar.navbar-default
 		.container
-			.navbar-brand= link_to "Fowl Board", root_path
+			.navbar-brand= link_to "The GameFowl Board", root_path
 			
 			- if user_signed_in?
 				%ul.nav.navbar-nav.navbar-right
