remove overflow on main

--- a/app/assets/stylesheets/contacts.css.scss
+++ b/app/assets/stylesheets/contacts.css.scss
@@ -1,8 +1,9 @@
 body {
 	background: #fff ;
+}
+body .contacts_layout {
 	overflow: hidden;
 }
-
 h1 {
   font-family: Arial,sans-serif;
   font-size:30px;
