added logo & image

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -32,7 +32,7 @@
       <div class="row">
        
         <div class="col-lg-4 model">
-					 <%= image_tag('randell_cock.png') %>
+					<%= image_tag('randel.png') %>
         </div>
         <div class="col-lg-6 text-center v-center">
           
