--- a/app/assets/stylesheets/contacts.css.scss
+++ b/app/assets/stylesheets/contacts.css.scss
@@ -1,7 +1,7 @@
 body {
 	background: #fff ;
 }
-body .contacts_layout {
+.contacts_layout {
 	overflow: hidden;
 }
 h1 {
@@ -37,7 +37,14 @@ h1 {
 
 .model img  {
 	width: 500px;
-	background-size: contain;
-	background-position: center;
 }
-  
+
+.navbar-logo {
+	float: left;
+	padding: 5px;
+	height: 50px;
+	
+	img {
+		width: 110px;
+	}
+}
