added video and update fowl view

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -88,6 +88,11 @@ nav {
 			margin: 0 auto;
 		}
 	}
+	.fowl_video {
+		video {
+			margin-top: 10px;
+		}
+	}
 	.panel-body {
 		padding: 35px;
 		h1 {
