--- a/app/views/fowls/_form.html.haml
+++ b/app/views/fowls/_form.html.haml
@@ -12,6 +12,9 @@
 		= f.file_field :image, input_html: { class: 'form-control' }
 		
 	.form-group
+		= f.file_field :video, input_html: { class: 'form-control' }
+		
+	.form-group
 		= f.input :title, input_html: { class: 'form-control' }
 	.form-group
 		= f.input :price, input_html: { class: 'form-control' }
