--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -57,6 +57,12 @@ nav {
 	  	a {
 				color: #474747;
 	  	}
+	
+		  a:hover {
+				color: #ffae00;
+				text-decoration: none;
+				background: none;
+	  	}
 	  }
 	  .user {
 	  	font-size: 12px;
