added logo to newsletter

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -41,6 +41,7 @@
           
           <br><br><br>
           <%= render 'contact' %>
+          <div style="padding-top: 70px"><img src="/assets/cocker-0928b35e2c7f53e45977736900da9e43.jpg" alt="Cocker"></div>
         </div>
         
       </div> <!-- /row -->
