--- a/app/views/contacts/_contact.html.erb
+++ b/app/views/contacts/_contact.html.erb
@@ -4,7 +4,7 @@
 
   <div class="input-group" style="width:340px;text-align:center;margin:0 auto;">
     <input name="contact[email]" class="form-control input-lg email" title="Don't worry. We hate spam, and will not share your email with anyone." placeholder="Email Address" type="email" required>
-    <span class="input-group-btn"><%= f.button :submit, "Subscribe", class: "btn btn-lg btn-primary" %></span>
+    <span class="input-group-btn"><%= f.button :submit, "Subscribe", class: "btn btn-lg btn-danger" %></span>
   </div>
 
 <% end %>
