--- a/app/views/fowls/show.html.haml
+++ b/app/views/fowls/show.html.haml
@@ -19,8 +19,9 @@
 					.col-md-6
 						.btn-group.pull-right
 							- if user_signed_in?
-								= link_to 'Edit', edit_fowl_path, class: "btn btn-default"
-								= link_to 'Delete', fowl_path, method:  :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default"
+								- if @fowl.user_id == current_user.id
+									= link_to 'Edit', edit_fowl_path, class: "btn btn-default"
+									= link_to 'Delete', fowl_path, method:  :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default"
 			.panel-footer
 				.row
 					.col-md-6
