--- a/app/views/fowls/_price.html.erb
+++ b/app/views/fowls/_price.html.erb
@@ -1,5 +1,5 @@
 <div class="panel-overlay-bottom-left panel-overlay-label panel-overlay-listing-label"> 
-  <sup class="h6 text-contrast"> &#8369; </sup> 
-  <span class="h3 price-amount"> <%= number_to_currency(price.price, unit: nil) %> </span> 
+<!--  <sup class="h6 text-contrast">  </sup> -->
+  <span class="h3 price-amount"> <%= number_to_currency(price.price, unit: '₱') %> </span> 
   <sup class="h6 text-contrast"> </sup> 
 </div> 
