--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -5,14 +5,4 @@
 			.panel-body
 				%h2= link_to fowl.title, fowl
 				%p.user
-					= fowl.user.email if fowl.user
-				.btn-group.pull-right
-					= link_to like_fowl_path(fowl), method: :put, class: "btn btn-default" do
-						%span.glyphicon.glyphicon-eye-open
-						= fowl.count_views
-					= link_to fowl, class: "btn btn-default" do
-						%span.glyphicon.glyphicon-comment
-							= fowl.get_upvotes.size
-					= link_to like_fowl_path(fowl), method: :put, class: "btn btn-default" do
-						%span.glyphicon.glyphicon-heart
-							= fowl.get_upvotes.size
+					= fowl.user.name if fowl.user
