--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,10 @@
 					<%= f.error_notification %>
 
 					<div class="form-group">
+						<%= f.input :name, :required => true, input_html: { class: 'form-control' } %>
+					</div>
+
+					<div class="form-group">
 						<%= f.input :email, :required => true, :autofocus => true, input_html: { class: 'form-control' } %>
 					</div>
 
