--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,9 @@
 			</div>
 			<div class="panel-body">
 					<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+					    <div class="form-group">
+							<%= f.input :name, :required => false, input_html: { class: 'form-control' } %>
+						</div>
 						<div class="form-group">
 							<%= f.input :email, :required => false, :autofocus => true, input_html: { class: 'form-control' } %>
 						</div>
