--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,15 @@
 					    <div class="form-group">
 							<%= f.input :name, :required => false, input_html: { class: 'form-control' } %>
 						</div>
+
+						<div class="form-group">
+							<%= f.input :location, :required => true, input_html: { class: 'form-control' } %>
+					    </div>
+
+						<div class="form-group">
+							<%= f.input :contact_number, :required => true, input_html: { class: 'form-control' } %>
+						</div>
+
 						<div class="form-group">
 							<%= f.input :email, :required => false, :autofocus => true, input_html: { class: 'form-control' } %>
 						</div>
