committed again changes

--- a/app/views/fowls/index.html.haml
+++ b/app/views/fowls/index.html.haml
@@ -17,6 +17,6 @@
 							%td 
 								= fowl.user.location
 						%tr{:style => "background: rgb(221, 238, 247) none repeat scroll 0% 0%;"}
-							%td Contact #:
+							%td Contact:
 							%td 
 								= fowl.user.contact_number
