--- a/app/views/fowls/_form.html.haml
+++ b/app/views/fowls/_form.html.haml
@@ -7,10 +7,10 @@
 			%ul
 				- @fowl.errors.full_messages.each do |msg|
 					%li= msg
-					
+	Upload Image				
 	.form-group
 		= f.file_field :image, input_html: { class: 'form-control' }
-		
+	Upload Video	
 	.form-group
 		= f.file_field :video, input_html: { class: 'form-control' }
 		
@@ -20,8 +20,6 @@
 		= f.input :price, input_html: { class: 'form-control' }
 	.form-group
 		= f.input :age, input_html: { class: 'form-control' }
-	.form-group
-		= f.input :contact_number, input_html: { class: 'form-control' }	
 	.form-group
 		= f.input :description, input_html: { class: 'form-control' }
 		
