--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -140,6 +140,8 @@ textarea {
 	min-height: 250px;
 }
 
+@import "social-share-button";
+
 .panel-overlay-bottom-left { bottom: 15px; left: 15px; float:left; position:relative; bottom:60px} 
 .panel-overlay-label { background-color: rgba(60, 63, 64, 0.9); color: #fff; padding: 10px; } 
 .panel-overlay-listing-label { left: 0; padding: 7px 10px; } 
