--- a/app/views/fowls/show.html.haml
+++ b/app/views/fowls/show.html.haml
@@ -23,6 +23,8 @@
 									= link_to 'Edit', edit_fowl_path, class: "btn btn-default"
 									= link_to 'Delete', fowl_path, method:  :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default"
 					= social_share_button_tag(@fowl.title, :url => fowl_url, :image => @fowl.image.url)
+					.fb-like{"data-action" => "like", "data-href" => "http://thecockers.net/fowls/6", "data-layout" => "standard", "data-show-faces" => "true"}
+					
 			.panel-footer
 				.row
 					.col-md-6
