--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
 		%meta{:content => "http://thecockers.net/system/fowls/images/000/000/006/original/IMG_4724.JPG?1446893742", :property => "og:image"}/
 		%meta{:content => "thecockers.net", :property => "og:site_name"}/
 		%meta{:content => "test sa ko", :property => "og:description"}/
-		%title= content_for?(:titile) ? yield(:title) : "Game Fowls"
+		%title= content_for?(:title) ? yield(:title) : "Game Fowls"
 		= stylesheet_link_tag	'application', 'data-turbolinks-track' => true
 		= javascript_include_tag 'application', 'data-turbolinks-track' => true
 		= csrf_meta_tags
@@ -28,4 +28,14 @@
 			- flash.each do |name, msg|
 				= content_tag :div, msg, class: "alert alert-info"
 				
-			= yield
+			= yield	
+		#fb-root
+		:javascript
+		  (function(d, s, id) {
+		        var js, fjs = d.getElementsByTagName(s)[0];
+		        if (d.getElementById(id)) return;
+		        js = d.createElement(s); js.id = id;
+		        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1";
+		        fjs.parentNode.insertBefore(js, fjs);
+		      }(document, 'script', 'facebook-jssdk'));/ Your like button code
+		
