--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+
+
 body {
 	background: #E9E9E9;
 }
@@ -138,6 +140,19 @@ nav {
 
 textarea {
 	min-height: 250px;
+}
+
+side {
+line-height:30px;
+background-color:#acc98f;
+height:300px;
+width:100px;
+float:left;
+padding:5px;
+}
+
+.container-header-color {
+	background: #99CC36;
 }
 
 
