--- a/app/assets/stylesheets/simple-sidebar.css
+++ b/app/assets/stylesheets/simple-sidebar.css
@@ -13,7 +13,10 @@
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+    max-height:95vh;
 }
+
+
 
 #wrapper.toggled {
     padding-left: 250px;
@@ -49,9 +52,12 @@
     margin-right: -250px;
 }
 
+
+
 /* Sidebar Styles */
 
 .sidebar-nav {
+    height: 90px;
     position: absolute;
     top: 0;
     width: 250px;
