--- a/app/assets/stylesheets/simple-sidebar.css
+++ b/app/assets/stylesheets/simple-sidebar.css
@@ -57,7 +57,7 @@
 /* Sidebar Styles */
 
 .sidebar-nav {
-    height: 90px;
+    height: 90%;
     position: absolute;
     top: 0;
     width: 250px;
