remove_chat_room

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,15 +29,15 @@
 
     #wrapper
       / Sidebar
-      #sidebar-wrapper
-        %ul.sidebar-nav
-          <script id="cid0020000110223917797" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"gamefowl2017","arch":"js","styles":{"a":"99CC36","b":100,"c":"000000","d":"000000","k":"99CC36","l":"99CC36","m":"99CC36","p":"10","q":"99CC36","r":100,"usricon":0,"surl":0,"fwtickm":1}}</script>
+      / #sidebar-wrapper
+      /   %ul.sidebar-nav
+      /     <script id="cid0020000110223917797" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"gamefowl2017","arch":"js","styles":{"a":"99CC36","b":100,"c":"000000","d":"000000","k":"99CC36","l":"99CC36","m":"99CC36","p":"10","q":"99CC36","r":100,"usricon":0,"surl":0,"fwtickm":1}}</script>
 
-      / /#sidebar-wrapper
-      / Page Content
-      #page-content-wrapper
-        .container-fluid
-          = yield
+      / / /#sidebar-wrapper
+      / / Page Content
+      / #page-content-wrapper
+      /   .container-fluid
+      /     = yield
       / /#page-content-wrapper
     / /#wrapper
     / jQuery
