--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,7 +27,7 @@
             %li= link_to "Sign In", new_user_session_path
 
 
-    #wrapper
+    / #wrapper
       / / Sidebar
       / #sidebar-wrapper
       /   %ul.sidebar-nav
