--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -35,9 +35,9 @@
 
       / /#sidebar-wrapper
       / Page Content
-      / #page-content-wrapper
-    .container-fluid
-      = yield
+    page-content-wrapper
+      .container-fluid
+        = yield
       / /#page-content-wrapper
     / /#wrapper
     / jQuery
