--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,6 +11,9 @@
 					<div class="form-group">
 						<%= f.input :name, :required => true, input_html: { class: 'form-control' } %>
 					</div>
+					<div class="form-group">
+						<%= f.input :store_name, :required => true, input_html: { class: 'form-control' } %>
+					</div>
 
 					<div class="form-group">
 						<%= f.input :location, :required => true, input_html: { class: 'form-control' } %>
