--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,9 @@
 					    <div class="form-group">
 							<%= f.input :name, :required => false, input_html: { class: 'form-control' } %>
 						</div>
+						<div class="form-group">
+							<%= f.input :store_name, :required => false, input_html: { class: 'form-control' } %>
+						</div>
 
 						<div class="form-group">
 							<%= f.input :location, :required => true, input_html: { class: 'form-control' } %>
