--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
 							<%= f.input :name, :required => false, input_html: { class: 'form-control' } %>
 						</div>
 						<div class="form-group">
-							<%= f.input :store_name, :required => false, input_html: { class: 'form-control' } %>
+							<%= f.input :store_name, :required => true, input_html: { class: 'form-control' } %>
 						</div>
 
 						<div class="form-group">
