--- a/app/views/fowls/show.html.haml
+++ b/app/views/fowls/show.html.haml
@@ -2,7 +2,7 @@
 	.col-md-8.col-md-offset-2
 		.panel.panel-default
 			.panel-heading.fowl_image
-				= image_tag @fowl.image_url
+				= image_tag @fowl.image_url(:large)
 			.panel-heading.fowl_video
 				= video_tag @fowl.video_url, controls: true, style: " margin-left: 15%; max-width: 70%;" if @fowl.video.present?
 			.panel-body
