--- a/app/views/fowls/_showfowl.html.haml
+++ b/app/views/fowls/_showfowl.html.haml
@@ -1,3 +1,3 @@
-<div class="fotorama" data-width="700" data-ratio="700/467" data-max-width="100%">
+/ <div class="fotorama" data-width="700" data-ratio="700/467" data-max-width="100%">
  
-</div>
+/ </div>
