--- a/app/views/layouts/_sidemenu.html.erb
+++ b/app/views/layouts/_sidemenu.html.erb
@@ -1,155 +1,148 @@
-  
-            <div class="panel-group" id="accordion">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><span class="glyphicon glyphicon-folder-close">
-                            </span>Bloodlines</a>
-                        </h4>
-                    </div>
-                    <div id="collapseOne1" class="in">
-                        <div class="panel-body">
-                            <table class="table">
-                                <tr>
-                                    <td>
-                                        <span class="glyphicon glyphicon-pencil text-primary"></span><a href="http://www.jquery2dotnet.com">Articles</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <span class="glyphicon glyphicon-flash text-success"></span><a href="http://www.jquery2dotnet.com">News</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <span class="glyphicon glyphicon-file text-info"></span><a href="http://www.jquery2dotnet.com">Newsletters</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <span class="glyphicon glyphicon-comment text-success"></span><a href="http://www.jquery2dotnet.com">Comments</a>
-                                        <span class="badge">42</span>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><span class="glyphicon glyphicon-th">
-                            </span>DERBY Schedules</a>
-                        </h4>
-                    </div>
-                    <div id="collapseTwo2" class="in collapse">
-                        <div class="panel-body">
-                            <table class="table">
+
+          <div class="panel-group" id="accordion">
+              <div class="panel panel-default">
+                  <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><span class="glyphicon glyphicon-folder-close">
+                          </span>Bloodlines</a>
+                      </h4>
+                  </div>
+                  <div id="collapseOne1" class="in">
+                      <div class="panel-body">
+                          <table class="table">
+                             <tr>
+                                  <td>
+                                    <span class="glyphicon glyphicon-flash text-success"></span>
+                                    <%= link_to "All", root_url %>
+                                  </td>
+                              </tr>
+                             <% FowlCategory.find_each do |category| %>
+                              <tr>
+                                  <td>
+                                    <span class="glyphicon glyphicon-flash text-success"></span>
+                                    <%= link_to category.name, root_url(bloodline_id: category.id) %>
+                                  </td>
+                              </tr>
+                             <% end %>
+                          </table>
+                      </div>
+                  </div>
+              </div>
+              <div class="panel panel-default">
+                  <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><span class="glyphicon glyphicon-th">
+                          </span>DERBY Schedules</a>
+                      </h4>
+                  </div>
+                  <div id="collapseTwo2" class="in collapse">
+                      <div class="panel-body">
+                          <table class="table">
 <!--                                 <tr>
-                                    <td>
-                                        <a href="http://www.jquery2dotnet.com">Orders</a> <span class="label label-success">$ 320</span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="http://www.jquery2dotnet.com">Invoices</a>
-                                    </td>
-                                </tr> -->
-                                <tr>
-                                    <td>
-                                        <a href="http://www.jquery2dotnet.com">Stag Derby</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="http://www.jquery2dotnet.com">Cock Derby</a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><span class="glyphicon glyphicon-th">
-                            </span>Farm Supplies & Equipments</a>
-                        </h4>
-                    </div>
-                    <div id="collapseTwo2" class="in ">
-                        <div class="panel-body">
-                            <table class="table">
+                                  <td>
+                                      <a href="http://www.jquery2dotnet.com">Orders</a> <span class="label label-success">$ 320</span>
+                                  </td>
+                              </tr>
+                              <tr>
+                                  <td>
+                                      <a href="http://www.jquery2dotnet.com">Invoices</a>
+                                  </td>
+                              </tr> -->
+                              <tr>
+                                  <td>
+                                      <a href="http://www.jquery2dotnet.com">Stag Derby</a>
+                                  </td>
+                              </tr>
+                              <tr>
+                                  <td>
+                                      <a href="http://www.jquery2dotnet.com">Cock Derby</a>
+                                  </td>
+                              </tr>
+                          </table>
+                      </div>
+                  </div>
+              </div>
+              <div class="panel panel-default">
+                  <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><span class="glyphicon glyphicon-th">
+                          </span>Farm Supplies & Equipments</a>
+                      </h4>
+                  </div>
+                  <div id="collapseTwo2" class="in ">
+                      <div class="panel-body">
+                          <table class="table">
 <!--                                 <tr>
-                                    <td>
-                                        <a href="http://www.jquery2dotnet.com">Orders</a> <span class="label label-success">$ 320</span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="http://www.jquery2dotnet.com">Invoices</a>
-                                    </td>
-                                </tr> -->
-                                <tr>
-                                    <td>
-                                        <a href="http://www.jquery2dotnet.com">Stag Derby</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="http://www.jquery2dotnet.com">Cock Derby</a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><span class="glyphicon glyphicon-user">
-                            </span>Account</a>
-                        </h4>
-                    </div>
-                    <div id="collapseThree3" class="in">
-                        <div class="panel-body">
-                            <table class="table">
-                                <tr>
-                                    <td>
-                                        <a href="http://www.jquery2dotnet.com">Change Password</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="http://www.jquery2dotnet.com">Notifications</a> <span class="label label-info">5</span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="http://www.jquery2dotnet.com">Import/Export</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <span class="glyphicon glyphicon-trash text-danger"></span><a href="http://www.jquery2dotnet.com" class="text-danger">
-                                            Delete Account</a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                                  <td>
+                                      <a href="http://www.jquery2dotnet.com">Orders</a> <span class="label label-success">$ 320</span>
+                                  </td>
+                              </tr>
+                              <tr>
+                                  <td>
+                                      <a href="http://www.jquery2dotnet.com">Invoices</a>
+                                  </td>
+                              </tr> -->
+                              <tr>
+                                  <td>
+                                      <a href="http://www.jquery2dotnet.com">Stag Derby</a>
+                                  </td>
+                              </tr>
+                              <tr>
+                                  <td>
+                                      <a href="http://www.jquery2dotnet.com">Cock Derby</a>
+                                  </td>
+                              </tr>
+                          </table>
+                      </div>
+                  </div>
+              </div>
+              <div class="panel panel-default">
+                  <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><span class="glyphicon glyphicon-user">
+                          </span>Account</a>
+                      </h4>
+                  </div>
+                  <div id="collapseThree3" class="in">
+                      <div class="panel-body">
+                          <table class="table">
+                              <tr>
+                                  <td>
+                                      <a href="http://www.jquery2dotnet.com">Change Password</a>
+                                  </td>
+                              </tr>
+                              <tr>
+                                  <td>
+                                      <a href="http://www.jquery2dotnet.com">Notifications</a> <span class="label label-info">5</span>
+                                  </td>
+                              </tr>
+                              <tr>
+                                  <td>
+                                      <a href="http://www.jquery2dotnet.com">Import/Export</a>
+                                  </td>
+                              </tr>
+                              <tr>
+                                  <td>
+                                      <span class="glyphicon glyphicon-trash text-danger"></span><a href="http://www.jquery2dotnet.com" class="text-danger">
+                                          Delete Account</a>
+                                  </td>
+                              </tr>
+                          </table>
+                      </div>
+                  </div>
+              </div>
+          </div>
 <!--        </div>-->
 <!--
-        <div class="col-sm-9 col-md-9">
-            <div class="well">
-                <h1>
-                    Accordion Menu With Icon</h1>
-                Admin Dashboard Accordion Menu
-            </div>
-        </div>
+      <div class="col-sm-9 col-md-9">
+          <div class="well">
+              <h1>
+                  Accordion Menu With Icon</h1>
+              Admin Dashboard Accordion Menu
+          </div>
+      </div>
 -->
 <!--
-    </div>
+  </div>
 </div>
 -->
