remove link from sidebar

--- a/app/views/layouts/_sidemenu.html.erb
+++ b/app/views/layouts/_sidemenu.html.erb
@@ -50,12 +50,12 @@
                               </tr> -->
                               <tr>
                                   <td>
-                                      <a href="http://www.jquery2dotnet.com">Stag Derby</a>
+                                      <a href="">Stag Derby</a>
                                   </td>
                               </tr>
                               <tr>
                                   <td>
-                                      <a href="http://www.jquery2dotnet.com">Cock Derby</a>
+                                      <a href="">Cock Derby</a>
                                   </td>
                               </tr>
                           </table>
@@ -84,12 +84,12 @@
                               </tr> -->
                               <tr>
                                   <td>
-                                      <a href="http://www.jquery2dotnet.com">Stag Derby</a>
+                                      <a href="">Stag Derby</a>
                                   </td>
                               </tr>
                               <tr>
                                   <td>
-                                      <a href="http://www.jquery2dotnet.com">Cock Derby</a>
+                                      <a href="">Cock Derby</a>
                                   </td>
                               </tr>
                           </table>
@@ -108,22 +108,22 @@
                           <table class="table">
                               <tr>
                                   <td>
-                                      <a href="http://www.jquery2dotnet.com">Change Password</a>
+                                      <a href="">Change Password</a>
                                   </td>
                               </tr>
                               <tr>
                                   <td>
-                                      <a href="http://www.jquery2dotnet.com">Notifications</a> <span class="label label-info">5</span>
+                                      <a href="">Notifications</a> <span class="label label-info">5</span>
                                   </td>
                               </tr>
                               <tr>
                                   <td>
-                                      <a href="http://www.jquery2dotnet.com">Import/Export</a>
+                                      <a href="">Import/Export</a>
                                   </td>
                               </tr>
                               <tr>
                                   <td>
-                                      <span class="glyphicon glyphicon-trash text-danger"></span><a href="http://www.jquery2dotnet.com" class="text-danger">
+                                      <span class="glyphicon glyphicon-trash text-danger"></span><a href="" class="text-danger">
                                           Delete Account</a>
                                   </td>
                               </tr>
