--- a/app/views/layouts/_sidemenu.html.erb
+++ b/app/views/layouts/_sidemenu.html.erb
@@ -62,7 +62,7 @@
                       </div>
                   </div>
               </div>
-              <div class="panel panel-default">
+              <!-- <div class="panel panel-default">
                   <div class="panel-heading">
                       <h4 class="panel-title">
                           <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><span class="glyphicon glyphicon-th">
@@ -82,21 +82,21 @@
                                       <a href="http://www.jquery2dotnet.com">Invoices</a>
                                   </td>
                               </tr> -->
-                              <tr>
+                              <!-- <tr>
                                   <td>
                                       <a href="">Stag Derby</a>
                                   </td>
-                              </tr>
-                              <tr>
+                              </tr> -->
+                              <!-- <tr>
                                   <td>
                                       <a href="">Cock Derby</a>
                                   </td>
-                              </tr>
-                          </table>
+                              </tr> -->
+                          <!-- </table>
                       </div>
-                  </div>
-              </div>
-              <div class="panel panel-default">
+                  </div> -->
+              <!-- </div> -->
+              <!-- <div class="panel panel-default">
                   <div class="panel-heading">
                       <h4 class="panel-title">
                           <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><span class="glyphicon glyphicon-user">
@@ -130,8 +130,8 @@
                           </table>
                       </div>
                   </div>
-              </div>
-          </div>
+              </div> -->
+          </div> 
 <!--        </div>-->
 <!--
       <div class="col-sm-9 col-md-9">
